--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,82 @@
-.App {
+@import url('https://fonts.googleapis.com/css2?family=Gabarito:wght@500&family=Lato:ital,wght@1,300&family=Roboto:wght@300&family=Rubik:ital@1&display=swap');
+*{
+  padding: 0;
+  margin: 0;
+  font-family: 'Gabarito', cursive;
+}
+.navbar{
+  background-color: #000033;
+  padding: 1.5rem;
+}
+.logo{
+  width: 5%;
+  padding: 1rem 3rem;
+  position: absolute;
+}
+.info{
+  color: #fff;
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.address , .contact, .cin{
+  opacity: 0.4;
+  font-size: 0.8rem;
+  line-height: 1.5;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+span{
+  padding-left: 2rem;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.personalDetails{
+  padding: 2rem 10rem;
+}
+.fLname{
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  padding: 1rem 0;
+}
+.lname{
+  margin-left: 2rem;
+}
+input{
+  padding: 0.4rem ;
+  margin: 0.51rem 0;
+  width: 15rem;
+}
+label{
+  padding-bottom: 1rem;
+  color: #000033;
+}
+.photo{
+  width: 20%;
+  position: absolute;
+  top: 15rem;
+  right: 8rem;
+  border-radius: 10px;
+}
+.btn{
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+}
+.btn-primary{
+  padding: 0.5rem 2rem;
+  background-color: #000033;
+  color: #fff;
+  border-radius: 10px;
+  cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
+footer{
+  background-color: #000033;
+  padding: 1rem 3rem;
+  color: #fff;
+  display: flex;
+  justify-content: space-around;
+  margin-top: 2rem;
+}
+.b2-heading{
+  margin: 1rem 0;
+}
+footer p{
+  padding: 0.2rem 0;
+  cursor: pointer;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
